force-app/main/default/objects/Hotel_Booking__c/Hotel_Booking__c.object-meta.xml
<CustomObject>
    <label>Hotel Booking</label>
    <nameField>
        <displayFormat>HB-{0000}</displayFormat>
        <label>Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotel Bookingss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>