force-app/main/default/objects/Hotel_Booking__c/fields/Guest_Id_Number__c.field-meta.xml
<CustomField>
    <fullName>Guest_Id_Number__c</fullName>
    <label>Guest Id Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>