force-app/main/default/objects/Hotel_Booking__c/fields/Guest_id_type__c.field-meta.xml
<CustomField>
    <fullName>Guest_id_type__c</fullName>
    <label>Guest id type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>guest_id_type</valueSetName>
    </valueSet>
</CustomField>