force-app/main/default/objects/Hotel_Booking__c/fields/Guest_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Guest Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hotel Bookingss</relationshipLabel>
    <relationshipName>Hotel_Bookingss</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>