force-app/main/default/objects/Hotel_Booking__c/fields/Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Hotel Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hotel Bookingss</relationshipLabel>
    <relationshipName>Hotel_Bookingss</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>