force-app/main/default/objects/Hotel_Booking__c/recordTypes/New_Booking_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>New_Booking_Record_Type</fullName>
    <active>true</active>
    <label>New Booking Record Type</label>
</RecordType>